# opengl-redbook-examples

./: CMakeLists.txt
include/: vgl.h
include/GL/: glcorearb.h  glext.h
include/GL3/: gl3w.h
lib/: gl3w.c
src/01-triangle/: 01-triangle.cpp
